# hip-sys

./: Cargo.toml  README.md
examples/: hip_info.rs
hip-runtime-sys/: Cargo.toml  bindgen.sh  build.rs
hip-runtime-sys/src/: bindings.rs  lib.rs
hipblas-sys/: Cargo.toml  build.rs
hipblas-sys/src/: bindings.rs  lib.rs
hipblaslt-sys/: Cargo.toml  build.rs  wrapper.h
hipblaslt-sys/src/: bindgen.sh  bindings.rs
src/: lib.rs
tests/: integration_tests.rs
