[package]
name = "hip-sys"
version = "0.1.1"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"
rust-version = "1.60"

[features]
blas = ["hipblas-sys"]
bindgen = ["hip-runtime-sys/bindgen", "hipblas-sys?/bindgen"]

[dependencies]
hip-runtime-sys = { path = "hip-runtime-sys" }

hipblas-sys = { path = "hipblas-sys", optional = true }
