[package]
name = "hipblas-sys"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cjordan/hip-sys"
description = "Bindings for HIP blas"
links = "hipblas"

[dependencies]
libc = "0.2.74"

[build-dependencies]
bindgen = { version = "0.65.1", optional = true }
